Regression: Multi-view images fail to display properly in the Image Editor #95298

Closed
opened 2022-01-28 22:32:00 +01:00 by Jesse Yurkovich · 23 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: AMD FirePro W2100 ATI Technologies Inc. 4.5.14831 Core Profile Context FireGL 21.Q2.1 27.20.21026.2006

Blender Version
Broken: version: 3.2 (master)
Worked: version: 3.1 release

Initially caused by 8355ac97b4

Short description of error
It looks like a recent refactor may have caused a regression where multi-view / stereo images are not displayed properly.

Exact steps for others to reproduce the error
Multi-view loading is somewhat broken (different bug) so you'll have to follow the steps below closely.

Broken Working
mv-bug.png alpha-ok.png
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: AMD FirePro W2100 ATI Technologies Inc. 4.5.14831 Core Profile Context FireGL 21.Q2.1 27.20.21026.2006 **Blender Version** Broken: version: 3.2 (master) Worked: version: 3.1 release Initially caused by 8355ac97b4 **Short description of error** It looks like a recent refactor may have caused a regression where multi-view / stereo images are not displayed properly. **Exact steps for others to reproduce the error** Multi-view loading is somewhat broken (different bug) so you'll have to follow the steps below closely. - Download `Adjuster.exr` from https://github.com/AcademySoftwareFoundation/openexr-images/tree/master/MultiView - Load this image in the Image Editor - Open the N-panel, click Image, and then click the refresh button - Toggle the "Show Stereo" button in the Image Editor top header to Off and then back On - Observe that the image is not being displayed properly | Broken | Working | | -- | -- | | ![mv-bug.png](https://archive.blender.org/developer/F12892522/mv-bug.png) | ![alpha-ok.png](https://archive.blender.org/developer/F12831797/alpha-ok.png) |
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Not bisected but I assume issue came with either of bdd74e1e93 and 0a32ac02e9
cc @Jeroen-Bakker

Not bisected but I assume issue came with either of bdd74e1e9338 and 0a32ac02e976 cc @Jeroen-Bakker
Author
Member

A bisect points to bdd74e1e93 as the culprit.

A bisect points to bdd74e1e93 as the culprit.
Author
Member

poke @Jeroen-Bakker as I wouldn't want this one to slip through the release.

poke @Jeroen-Bakker as I wouldn't want this one to slip through the release.
Jeroen Bakker self-assigned this 2022-02-22 14:12:40 +01:00

This issue was referenced by cb736d2f03

This issue was referenced by cb736d2f030e3a66a6f65438b257452124c12523
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

@Jeroen-Bakker This issue might still be present as I'm only able to see the cyan/green portion of the image now for some reason:

mv-bug.png

version: 3.2.0 Alpha, branch: master, commit date: 2022-03-01 00:18, hash: eb0f8317e2

@Jeroen-Bakker This issue might still be present as I'm only able to see the cyan/green portion of the image now for some reason: ![mv-bug.png](https://archive.blender.org/developer/F12892522/mv-bug.png) version: 3.2.0 Alpha, branch: master, commit date: 2022-03-01 00:18, hash: `eb0f8317e2`
Member

Think I should find a GCN1 card....

Think I should find a GCN1 card....
Author
Member

The above was actually on my other device which has a nVidia 1070. So probably not too related to hardware.

The above was actually on my other device which has a nVidia 1070. So probably not too related to hardware.
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@Jeroen-Bakker I can reproduce it in my computer:

Operating system: Linux-5.13.0-28-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.47.03
@Jeroen-Bakker I can reproduce it in my computer: ``` Operating system: Linux-5.13.0-28-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.47.03 ```
Philipp Oeser changed title from Multi-view images fail to display properly in the Image Editor to Regression: Multi-view images fail to display properly in the Image Editor 2022-03-25 13:30:28 +01:00

I think we need a new bisect since 3.1 has no commit that is not in master.

I think we need a new bisect since 3.1 has no commit that is not in master.
Author
Member

I'm not able to make a good bisect since master never worked since January. However, one of the more likely commits that has caused the deviations between 3.1 and 3.2 is 8355ac97b4. It removed the 2 uniforms required for the stereo shader: image_texture and overlays_texture are not bound inside gpu_viewport.c any longer.

Notice how 2 of the uniforms are now missing

3.1 renderdoc 3.2 renderdoc
good.png bad.png
I'm not able to make a good bisect since master never worked since January. However, one of the more likely commits that has caused the deviations between 3.1 and 3.2 is 8355ac97b4. It removed the 2 uniforms required for the stereo shader: `image_texture` and `overlays_texture` are not bound inside `gpu_viewport.c` any longer. Notice how 2 of the uniforms are now missing | 3.1 renderdoc | 3.2 renderdoc | | -- | -- | | ![good.png](https://archive.blender.org/developer/F12949019/good.png) | ![bad.png](https://archive.blender.org/developer/F12949021/bad.png) |

Good finding. If I revert 8355ac97b4 this work again.

Good finding. If I revert 8355ac97b4 this work again.
Jeroen Bakker was unassigned by Dalai Felinto 2022-03-28 10:48:05 +02:00
Clément Foucault was assigned by Dalai Felinto 2022-03-28 10:48:05 +02:00
Clément Foucault was unassigned by Jeroen Bakker 2022-05-02 14:38:56 +02:00
Jeroen Bakker self-assigned this 2022-05-02 14:38:56 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Jeroen Bakker removed their assignment 2022-05-03 09:40:59 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2022-05-03 09:44:37 +02:00
Member

@fclem: back to you then

@fclem: back to you then

This issue was referenced by 061995775f

This issue was referenced by 061995775f87a455e685c706b40fe07765fa1b3b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95298
No description provided.