Fix T95298: Multiview images not displaying correctly.

Image users have a multi_index that wasn't updated in case it is a normal
image.