source/blender/draw/engines/image/image_engine.cc
@@ -122,6 +122,7 @@ class ImageEngine {
     space->release_buffer(instance_data->image, image_buffer, lock);
 
     ImageUser *iuser = space->get_image_user();
+    BKE_image_multiview_index(instance_data->image, iuser);
     drawing_mode.cache_image(vedata, instance_data->image, iuser);
   }
 
